syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  // Server-side streaming
  rpc SayHelloStreamReply (StreamRequest) returns (stream HelloReply) {}

  // Client-side streaming
  rpc SayStreamHello (stream HelloRequest) returns (StreamReply) {}

  // Bidirectional streaming
  rpc SayHelloFullDuplex (stream HelloRequest) returns (stream HelloReply) {}

  // Bidirectional streaming - request buffering
  rpc SayHelloHalfDuplex (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message StreamRequest {
  repeated string names = 1;
}

message StreamReply {
  repeated string messages = 1;
}
